<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>sk.tuke.yajco</groupId>
        <artifactId>yajco</artifactId>
        <version>0.5.10-SNAPSHOT</version>
    </parent>

    <groupId>sk.tuke.yajco</groupId>
    <artifactId>yajco-annotation-processor</artifactId>
    <version>0.5.10-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>yajco-annotation-processor</name>

    <description>YAJCo - Yet Another Java Compiler Compiler - object oriented language specification - annotation processor</description>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
        </license>
    </licenses>
    <url>http://code.google.com/p/yajco/</url>
    <developers>
        <developer>
            <name>Jaroslav Porubän</name>
            <email>jaroslav.poruban@tuke.sk</email>
            <organization>Technical University of Košice</organization>
        </developer>
        <developer>
            <name>Dominik Lakatoš</name>
            <email>deel77@gmail.com</email>
            <organization>Technical University of Košice</organization>
        </developer>
    </developers>
    <scm>
        <url>http://yajco.googlecode.com/svn/trunk/</url>
        <connection>scm:svn:http://yajco.googlecode.com/svn/trunk/</connection>
        <developerConnection>scm:svn:https://yajco.googlecode.com/svn/trunk/yajco-annotation-processor/</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M2</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.1.0</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <proc>none</proc>
                </configuration>
            </plugin>

            <!--            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <id>create-executable-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>
                                    jar-with-dependencies
                                </descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>yajco.Main</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->

            <!-- Runs unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>

            <!-- Can be used in maven verify phase. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!--        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>yajco-javacc-parser-generator-module</artifactId>
            <version>${project.version}</version>
        </dependency>-->
        <!--        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>yajco-beaver-parser-generator-module</artifactId>
            <version>${project.version}</version>
        </dependency>-->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>yajco-generator-tools</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>default-profile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <file>
                    <exists>${java.home}/../lib/tools.jar</exists>
                </file>
            </activation>
            <properties>
                <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
            </properties>
        </profile>
        <profile>
            <id>mac-profile</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <file>
                    <exists>${java.home}/../Classes/classes.jar</exists>
                </file>
            </activation>
            <properties>
                <toolsjar>${java.home}/../Classes/classes.jar</toolsjar>
            </properties>
        </profile>
    </profiles>
</project>
